--- a/static/css/diaspora.css
+++ b/static/css/diaspora.css
@@ -225,7 +225,7 @@ h1.title {font-size:30px;color:#333;line-height:1.3;position:relative;font-weigh
 .post-tags-list-item {float:left;margin-right:10px;background:rgba(102,128,153,0.075);border-radius:0;padding:2px 5px;}
 .post-tags-list-link {color:rgba(44,63,81,0.5);}
 
-/* Post or Page content style */
+/* Post or Page 121 style */
 .content {margin-top:50px;font-size:15px;line-height:2;color:#232323;}
 .content h1 {font-size:39px}
 .content h2 {font-size:32px}
