--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,32 +1,26 @@
 <!-- valine -->
-{{ if .Site.Params.valine.enable }}
-    <!-- id 将作为查询条件 -->
-
-    <div id="vcomments"></div>
-    <script src="/js/av-min.js"></script>
-    <script src='/js/Valine.min.js'></script>
-    <script type="text/javascript">
-        new Valine({
-            el: '#vcomments' ,
-            appId: '{{ .Site.Params.valine.appId }}',
-            appKey: '{{ .Site.Params.valine.appKey }}',
-            notify: '{{ .Site.Params.valine.notify }}',
-            verify: '{{ .Site.Params.valine.verify }}',
-            avatar:'{{ .Site.Params.valine.avatar }}',
-            placeholder: '{{ .Site.Params.valine.placeholder }}',
-            visitor: '{{ .Site.Params.valine.visitor }}',
-            meta: {{ .Site.Params.valine.meta }},
-            requiredFields: {{ .Site.Params.valine.requiredFields }},
-        });
-
-        document.getElementsByClassName('vpower txt-right')[0].remove();
-        let $comments = document.getElementById('vcomments');
-        let $vpanel = document.getElementsByClassName('vpanel')[0];
-        let $vcards = document.getElementsByClassName('vcards')[0];
-        let $vcount = document.getElementsByClassName('vcount')[0];
-        $comments.insertBefore($vcards,$vpanel);
-        $comments.insertBefore($vcount,$vcards);
-        document.getElementsByClassName('leancloud-visitors-count')[0].style.fontStyle='normal'
-
-    </script>
-{{ end }}
+<script type="text/javascript">
+  var option = {
+    el: '#vcomments',
+    appId: '{{ .Site.Params.valine.appId }}',
+    appKey: '{{ .Site.Params.valine.appKey }}',
+    notify: '{{ .Site.Params.valine.notify }}',
+    verify: '{{ .Site.Params.valine.verify }}',
+    avatar: '{{ .Site.Params.valine.avatar }}',
+    placeholder: '{{ .Site.Params.valine.placeholder }}',
+    visitor: '{{ .Site.Params.valine.visitor }}',
+    meta: {{ .Site.Params.valine.meta }},
+    requiredFields: {{ .Site.Params.valine.requiredFields }},
+  };
+  valine.init(option)
+  if (!$('#vcomments').is(":empty")) {
+    document.getElementsByClassName('vpower txt-right')[0].remove();
+    let $comments = document.getElementById('vcomments');
+    let $vpanel = document.getElementsByClassName('vpanel')[0];
+    let $vcards = document.getElementsByClassName('vcards')[0];
+    let $vcount = document.getElementsByClassName('vcount')[0];
+    $comments.insertBefore($vcards, $vpanel);
+    $comments.insertBefore($vcount, $vcards);
+    document.getElementsByClassName('leancloud-visitors-count')[0].style.fontStyle = 'normal'
+  }
+</script>
