--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,16 +1,24 @@
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="google" content="notranslate">
-  <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} &middot; {{ .Site.Title }}{{ end }}</title>
-  <meta name="keywords" content="素锦, inspiration, customization, rainmeter, design, web, 壁纸, 设计, 收集, wallpaper, collection, jaku, icon">
-  <meta name="description" content="世界上每个角落都有人过着相似的人生">
-  <meta name="author" content="{{ .Site.Params.author }}">
-  <link rel="icon" type="image/png" href="{{ .Site.Params.favicon }}">
-  <link rel="stylesheet" href="/css/diaspora.css">
-  <link rel="stylesheet" href="/css/insight.css">
-  <link rel="stylesheet" href="/css/custom.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="google" content="notranslate">
+    <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} &middot; {{ .Site.Title }}{{ end }}</title>
+    <meta name="keywords"
+          content="素锦, inspiration, customization, rainmeter, design, web, 壁纸, 设计, 收集, wallpaper, collection, jaku, icon">
+    <meta name="description" content="世界上每个角落都有人过着相似的人生">
+    <meta name="author" content="{{ .Site.Params.author }}">
+    <link rel="icon" type="image/png" href="{{ .Site.Params.favicon }}">
+    <link rel="stylesheet" href="/css/diaspora.css">
+    <link rel="stylesheet" href="/css/insight.css">
+    <link rel="stylesheet" href="/css/custom.css">
+
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/av-min.js"></script>
+    <script src='/js/Valine.min.js'></script>
+    <script type="text/javascript">
+      var valine = new Valine()
+    </script>
 </head>
