--- a/layouts/partials/single_article.html
+++ b/layouts/partials/single_article.html
@@ -8,7 +8,7 @@
         </div>
         <!-- <div title="查看壁纸" class="icon-images"></div> -->
         <h3 class="subtitle" style="display: none;">
-        {{ .Title }}</h3>
+            {{ .Title }}</h3>
         <div class="social">
             <div>
                 <div class="share">
@@ -23,7 +23,7 @@
         <div class="article">
             <div>
                 <h1 class="title">
-                {{ .Title }}</h1>
+                    {{ .Title }}</h1>
                 <div class="stuff">
                     <span>{{ .Date.Format .Site.Params.date_format }}</span>
                     <span>字数 {{ .Content | countwords  }}</span>
@@ -58,7 +58,7 @@
                     {{ .Content }}
                     <!--[if lt IE 9]>
                     <script>
-                    document.createElement('audio');</script>
+                        document.createElement('audio');</script>
                     <![endif]-->
                     <audio id="audio" loop="1" preload="auto" style="width: 100%;" controls="controls">
                         <source type="audio/mpeg" src="{{ .Params.mp3 }}">
@@ -72,6 +72,13 @@
         </div>
     </div>
     <div class="relate">
+        {{ if .Site.Params.valine.enable }}
+            <ul>
+                <div id="vcomments">
+                    {{ partial "comments.html" . }}
+                </div>
+            </ul>
+        {{ end }}
         <ul>
             <h3 id="prev_next">
                 <em>相 关 文 章</em>
@@ -91,30 +98,21 @@
             {{ if $series }}
                 {{ range first 5 ( where .Site.Pages "Params.series" $series ) }}
                     {{ if (ne .Title $title) }}
-                    <li>
-                        <div>
-                            <a class="relatea" href="{{ .Permalink }}" title="{{ .Title }}">
-                            {{ .Title }}</a>
-                            <p>{{ if .Description }}{{ .Description }}{{ else }}{{ .Summary }}{{ end }}...</p>
-                        </div>
-                        <!--
-                        -->
-                        <a href="{{ .Permalink }}" title="{{ .Title }}">
-                            <img class="relateimg" src="{{ .Params.cover }}" alt="{{ .Title }}">
-                        </a>
-                    </li>
+                        <li>
+                            <div>
+                                <a class="relatea" href="{{ .Permalink }}" title="{{ .Title }}">
+                                    {{ .Title }}</a>
+                                <p>{{ if .Description }}{{ .Description }}{{ else }}{{ .Summary }}{{ end }}...</p>
+                            </div>
+                            <!--
+                            -->
+                            <a href="{{ .Permalink }}" title="{{ .Title }}">
+                                <img class="relateimg" src="{{ .Params.cover }}" alt="{{ .Title }}">
+                            </a>
+                        </li>
                     {{ end }}
                 {{ end }}
             {{ end }}
-
-        </ul>
-    </div>
-    <div class="relate">
-        <ul>
-            <div class="post-comment">
-                <!-- 加入评论功能 -->
-                {{ partial "comments.html" . }}
-            </div>
         </ul>
     </div>
 </div>
