--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,7 @@
     <meta name="google" content="notranslate">
     <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} &middot; {{ .Site.Title }}{{ end }}</title>
     <meta name="keywords"
-          content="素锦, inspiration, customization, rainmeter, design, web, 壁纸, 设计, 收集, wallpaper, collection, jaku, icon">
+          content="fafa, 息羽悠游">
     <meta name="description" content="世界上每个角落都有人过着相似的人生">
     <meta name="author" content="{{ .Site.Params.author }}">
     <link rel="icon" type="image/png" href="{{ .Site.Params.favicon }}">
