--- a/static/css/diaspora.css
+++ b/static/css/diaspora.css
@@ -364,7 +364,7 @@ pre .keyword,pre .javascript .function {color:#cc99cc;}
     /*display: block;
     height: 100px;
     width: 100px;
-    background: url('/img/32.png') no-repeat center;*/
+    background: url('/media/32.png') no-repeat center;*/
 }
 .icon-menu {
     font-size: 20px;
